# esp-lock

./: README.md  sdkconfig.defaults
components/esp_codec_dev/: CMakeLists.txt  Kconfig  audio_codec_dev.c  audio_codec_vol.c  audio_device_if.c  codec_dev_utils.c  component.mk
components/esp_codec_dev/driver/es7210/: es7210.c  es7210_reg.h
components/esp_codec_dev/driver/es7243/: es7243.c
components/esp_codec_dev/driver/es7243e/: es7243e.c
components/esp_codec_dev/driver/es8156/: es8156.c  es8156_reg.h
components/esp_codec_dev/driver/es8311/: es8311.c  es8311_reg.h
components/esp_codec_dev/driver/es8374/: es8374.c
components/esp_codec_dev/driver/es8388/: es8388.c  es8388_reg.h  headphone_detect.c  headphone_detect.h
components/esp_codec_dev/driver/include/: es7210.h  es7243.h  es7243e.h  es8156.h  es8311.h  es8374.h  es8388.h  esxxx_common.h  tas5805m.h  zl38063.h
components/esp_codec_dev/driver/tas5805m/: tas5805m.c  tas5805m_reg.h  tas5805m_reg_cfg.h
components/esp_codec_dev/driver/zl38063/: zl38063.c
components/esp_codec_dev/driver/zl38063/api_lib/: vprocTwolf_access.c  vprocTwolf_access.h  vproc_common.c
components/esp_codec_dev/driver/zl38063/example_apps/: tw_spi_access.c
components/esp_codec_dev/driver/zl38063/firmware/: zl38063_config.h  zl38063_firmware.h
components/esp_codec_dev/include/: codec_dev_defaults.h  codec_dev_err.h  codec_dev_gpio.h  codec_dev_os.h  codec_dev_types.h  codec_dev_utils.h  esp_codec_dev.h
components/esp_codec_dev/interface/: audio_codec_ctrl_if.h  audio_codec_data_if.h  audio_codec_gpio_if.h  audio_codec_if.h
components/esp_codec_dev/internal/: audio_codec_vol.h
components/esp_codec_dev/platform/: audio_device_os.c  audio_gpio_if.c  audio_i2c_if.c  audio_i2s_if.c  audio_spi_if.c
components/esp_codec_dev/test/: CMakeLists.txt  test_codec.c
main/: CMakeLists.txt  audio_board.c  audio_board.h  main.c  (+5 more)
